[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ["version"]
name = "tunable"
authors = [
    {name = "Christian C. Sachs", email = "sachs.christian@gmail.com"},
]
description = "tunable manager"
readme = "README.md"
license = { file = "LICENSE" }
urls = { Source = "https://github.com/csachs/tunable" }
classifiers = [
        "Development Status :: 4 - Beta",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
]
dependencies = [
    "pyasn1",
    "pyyaml",
]

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
exclude = "local"
extend-ignore = "E203,"
max-complexity = 10
